# manganis

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: macos.yml  main.yml  windows.yml
assets/: file.txt  tailwind.css
assets/somefolder/: data.json
cli-support/: Cargo.toml  README.md
cli-support/examples/: cli.rs
cli-support/src/: avif.rs  cache.rs  file.rs  folder.rs  lib.rs  linker_intercept.rs  manifest.rs  marker.rs  tailwind.rs
cli-support/tests/: collects_assets.rs
common/: Cargo.toml  build.rs
common/src/: asset.rs  cache.rs  config.rs  file.rs  lib.rs  linker.rs  manifest.rs  package.rs  tailwind.rs
examples/: demo.rs  relative.txt
macro/: Cargo.toml  build.rs
macro/src/: css.rs  file.rs  font.rs  image.rs  js.rs  json.rs  lib.rs
src/: lib.rs
test-package/: Cargo.toml  collect_assets.toml
test-package/src/: main.rs
test-package/test-package-dependency/: Cargo.toml
test-package/test-package-dependency/src/: file.rs  lib.rs
test-package/test-package-nested-dependency/: Cargo.toml
test-package/test-package-nested-dependency/src/: file.rs  folder.rs  font.rs  js.rs  lib.rs
