[workspace]
package.version = "0.3.0-alpha.0"
members = [
    "packages/macro",
    "packages/common",
    "packages/cli-support",

    "packages/test-package",
    "packages/test-package/test-package-dependency",
    "packages/test-package/test-package-nested-dependency",
]

[workspace.dependencies]
base64 = "0.22.1"
infer = "0.16.0"
