[package]
name = "manganis-cli-support"
version = "0.2.1"
edition = "2021"
authors = ["Evan Almloff"]
description = "Ergonomic, Automatic, cross crate asset collection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/collect-assets/"
homepage = "https://dioxuslabs.com"
keywords = ["assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manganis-common = { path = "../common", version = "0.2.1" }

serde = { version = "1.0.183", features = ["derive"] }
toml = "0.7.6"
cargo-lock = { version = "9.0.0", features = ["dependency-tree"] }
cargo_metadata = "0.17.0"
cargo_toml = "0.16.3"
petgraph = "0.6.3"
anyhow = "1"
rayon = "1.7.0"
rustc-hash = "1.1.0"

# Tailwind
railwind = "0.1.5"

# Image compression/conversion
# JPEG
mozjpeg = { version = "0.10.7", default-features = false, features = ["parallel"] }
# PNG
imagequant = "4.2.0"
png = "0.17.9"
# Conversion
image = { version = "0.25" }
ravif = { version = "0.11", default-features = false }

# CSS Minification
lightningcss = "1.0.0-alpha.44"

# Remote assets
url = { version = "2.4.0", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
tracing = "0.1.37"

[features]
default = []
asm = ["ravif/asm", "mozjpeg/nasm_simd"]
html = ["manganis-common/html"]
