[package]
name = "manganis-cli-support"
version.workspace = true
edition = "2021"
authors = ["Evan Almloff"]
description = "Ergonomic, automatic, cross crate asset collection and optimization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/manganis/"
homepage = "https://dioxuslabs.com"
keywords = ["assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manganis-common = { path = "../common", version = "0.3.0-alpha.1" }

serde = { version = "1.0.183", features = ["derive"] }
serde_json = {version="1.0.116"}
anyhow = "1"
rayon = "1.7.0"
rustc-hash = "1.1.0"

# Tailwind
railwind = "0.1.5"

# Image compression/conversion
# JPEG
mozjpeg = { version = "0.10.7", default-features = false, features = ["parallel"] }
# PNG
imagequant = "4.2.0"
png = "0.17.9"
# Conversion
image = { version = "0.25" }
ravif = { version = "0.11", default-features = false }

# CSS Minification
lightningcss = "1.0.0-alpha.44"

# Js minification - swc has introduces minor versions with breaking changes in the past so we pin all of their crates
swc_allocator = "=0.1.8"
swc_atoms = "=0.6.7"
swc_cached = "=0.3.20"
swc_common = "=0.37.5"
swc_compiler_base = "=0.19.0"
swc_config = "=0.1.15"
swc_config_macro = "=0.1.4"
swc_ecma_ast = "=0.118.2"
swc_ecma_codegen = "=0.155.1"
swc_ecma_codegen_macros = "=0.7.7"
swc_ecma_compat_bugfixes = "=0.12.0"
swc_ecma_compat_common = "=0.11.0"
swc_ecma_compat_es2015 = "=0.12.0"
swc_ecma_compat_es2016 = "=0.12.0"
swc_ecma_compat_es2017 = "=0.12.0"
swc_ecma_compat_es2018 = "=0.12.0"
swc_ecma_compat_es2019 = "=0.12.0"
swc_ecma_compat_es2020 = "=0.12.0"
swc_ecma_compat_es2021 = "=0.12.0"
swc_ecma_compat_es2022 = "=0.12.0"
swc_ecma_compat_es3 = "=0.12.0"
swc_ecma_ext_transforms = "=0.120.0"
swc_ecma_lints = "=0.100.0"
swc_ecma_loader = "=0.49.1"
swc_ecma_minifier = "=0.204.0"
swc_ecma_parser = "=0.149.1"
swc_ecma_preset_env = "=0.217.0"
swc_ecma_transforms = "=0.239.0"
swc_ecma_transforms_base = "=0.145.0"
swc_ecma_transforms_classes = "=0.134.0"
swc_ecma_transforms_compat = "=0.171.0"
swc_ecma_transforms_macros = "=0.5.5"
swc_ecma_transforms_module = "=0.190.0"
swc_ecma_transforms_optimization = "=0.208.0"
swc_ecma_transforms_proposal = "=0.179.0"
swc_ecma_transforms_react = "=0.191.0"
swc_ecma_transforms_typescript = "=0.198.1"
swc_ecma_usage_analyzer = "=0.30.3"
swc_ecma_utils = "=0.134.2"
swc_ecma_visit = "=0.104.8"
swc_eq_ignore_macros = "=0.1.4"
swc_error_reporters = "=0.21.0"
swc_fast_graph = "=0.25.0"
swc_macros_common = "=0.3.13"
swc_node_comments = "=0.24.0"
swc_timer = "=0.25.0"
swc_trace_macro = "=0.1.3"
swc_transform_common = "=0.1.1"
swc_typescript = "=0.5.0"
swc_visit = "=0.6.2"

# Remote assets
url = { version = "2.4.0", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["blocking"] }
tracing = "0.1.37"

# Extracting data from an executable
object = {version="0.36.0", features=["wasm"]}

[dev-dependencies]
tracing-subscriber = "0.3.18"

[features]
default = []
asm = ["ravif/asm", "mozjpeg/nasm_simd"]
html = ["manganis-common/html"]
# Note: this feature now enables nothing and should be removed in the next major version
webp = []
avif = []
