[package]
name = "manganis-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.7.6"
anyhow = "1"
home = "0.5.5"
base64 = "0.21.5"
infer = "0.11.0"

# Remote assets
url = { version = "2.4.0", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["blocking"] }

[features]
html = []
