[package]
name = "manganis-common"
version.workspace = true
edition = "2021"
authors = ["Evan Almloff"]
description = "Ergonomic, automatic, cross crate asset collection and optimization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/manganis/"
homepage = "https://dioxuslabs.com"
keywords = ["assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.8.10"
anyhow = "1"
home = "0.5.5"
base64 = "0.22.1"
infer = "0.16.0"
cargo-config2 = "0.1.26"

# Remote assets
url = { version = "2.4.0", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["blocking"] }
tracing = "0.1.40"

[features]
html = []

[build-dependencies]
built = { version = "0.7", features = ["git2"] }
scratch = "1.0.7"
