[package]
name = "manganis-macro"
version = "0.1.0"
authors = ["Evan Almloff"]
edition = "2021"
description = "Ergonomic, Automatic, cross crate asset collection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/dioxus/"
homepage = "https://dioxuslabs.com"
keywords = ["assets"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
manganis-common = { path = "../common", version = "0.1.0" }
manganis-cli-support = { path = "../cli-support", version = "0.1.0" }
base64 = "0.21.5"
