[package]
name = "manganis-macro"
version = "0.2.2"
edition = "2021"
authors = ["Evan Almloff"]
description = "Ergonomic, automatic, cross crate asset collection and optimization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/collect-assets/"
homepage = "https://dioxuslabs.com"
keywords = ["assets"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
manganis-common = { path = "../common", version = "0.2.1" }
manganis-cli-support = { path = "../cli-support", version = "0.2.1", optional = true }
base64 = { version = "0.21.5", optional = true }
tracing-subscriber = "0.3.18"
serde_json = "1.0"

[features]
url-encoding = ["manganis-cli-support", "base64"]
