[package]
name = "test-package"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manganis = { path = "../" }
test-package-dependency = { path = "./test-package-dependency" }
manganis-cli-support = { path = "../cli-support", features = ["html"]}
manganis-common = { path = "../common" }
