[package]
name = "test-package"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manganis = { path = "../", version = "0.2.0" }
test-package-dependency = { path = "./test-package-dependency", version = "0.2.0" }
manganis-cli-support = { path = "../cli-support", features = ["html"], version = "0.2.0" }
manganis-common = { path = "../common", version = "0.2.0" }
tracing-subscriber = "0.3.17"
