[package]
name = "test-package-dependency"
version = "0.2.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manganis = { path = "../../", version = "0.2.1" }
test-package-nested-dependency = { path = "../test-package-nested-dependency" }
